--- a/Astra/astra_v2/home/templates/home/home.html
+++ b/Astra/astra_v2/home/templates/home/home.html
@@ -1,6 +1,18 @@
 {% extends 'home/base.html' %}
-
+{% load static %}
+{% block extra_css %}
+<link rel="stylesheet" href="{% static 'css/home.css' %}">
+{% endblock %}
 {% block title %}
 Главная страница
 {% endblock %}
 
+{% block content %}
+<div class="welcome-container">
+    <h1>Добро пожаловать</h1>
+    <p>Мы рады приветствовать вас на нашей платформе, разработанной для экспертов по продуктам Группы компания “Астра”.</p>
+    <p>Здесь вы найдете инструменты для работы с вопросами, обмена данными и анализа информации в безопасной среде.</p>
+    <p>Если у вас возникнут вопросы, обратитесь к администратору или ознакомьтесь с документацией.</p>
+    <p><strong>Начните работать с уверенностью в защите ваших данных!</strong></p>
+</div>
+{% endblock %}
