--- a/Astra/astra_v2/dashboard/templates/dashboard/dashboard.html
+++ b/Astra/astra_v2/dashboard/templates/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-{% extends 'home/base.html' %}
+{% comment %} {% extends 'home/base.html' %}
 
 {% block content %}
 <h1>Панель управления</h1>
@@ -49,4 +49,4 @@
         </ul>
     </div>
 </div>
-{% endblock %}
+{% endblock %} {% endcomment %}
